fix bug when adding book